# pyo3-log-minimal-example

./: .gitignore  Cargo.toml  test.py
src/: lib.rs
